tests/parser/syntax-errors/token-not-found/expected_rparen_func_call.choc
# RUN: choco-opt "%s" | filecheck "%s" --strict-whitespace

foo(5

# CHECK:      SyntaxError (line 3, column 6): token of kind TokenKind.RROUNDBRACKET not found.
# CHECK-NEXT: >>>foo(5
# CHECK-NEXT: >>>-----^
